# twopc

./: .buildinfo  .gitattributes  .gitignore  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: API.doctree  modules.doctree
.doctrees/notebooks/: docs.doctree
.doctrees/notebooks/api/: API.doctree  modules.doctree  twopc.doctree
.github/workflows/: docs.yml  test_and_upload.yml
_modules/: index.html
_modules/twopc/: ppc.html
_sources/notebooks/: docs.ipynb.txt
_sources/notebooks/api/: modules.rst.txt  twopc.rst.txt
_static/: theme.css
api/: API.html  modules.html
docs/: conf.py  index.rst
docs/_static/: theme.css
docs/api/: modules.rst
docs/notebooks/: docs.md
notebooks/: docs.html
notebooks/api/: API.html  modules.html  twopc.html
twopc/: __init__.py  _version.py  ppc.py
twopc/test/: basic_test.py
