[metadata]
name = twopc
description = A tool for making posterior predicitive checks with 3ML
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/grburgess/twopc
author_email = jmichaelburgess@gmail.com
author = J. Michael Burgess
requires_python = >=3.3.0
license = GPL-2+

classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX

    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
#    Topic :: Scientific/Engineering :: Physics

project_urls =
    Bug Tracker = https://github.com/grburgess/twopc/issues
    Source Code = https://github.com/grburgess/twopc


[options]
packages = find:
install_requires =
    threeml
    h5py
    joblib
    numpy
    matplotlib
    
tests_require =
    pytest
    pytest-codecov


[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts = --color=yes --cov=twopc --cov-report=term -ra --ignore=twopc/test --ignore=twopc/_version.py
log_cli = 1
log_cli_level = INFO
testpaths = twopc/test 
norecursedirs = twopc/test


[versioneer]
VCS=git
style=pep440
versionfile_source=twopc/_version.py
versionfile_build=twopc/_version.py
tag_prefix=v
parentdir_prefix=twopc-
